Fix z-index for order view to enable correct scrolling as well (64344)

--- a/app/assets/stylesheets/_orders.scss
+++ b/app/assets/stylesheets/_orders.scss
@@ -6,6 +6,7 @@
 .orders-header {
   padding: 15px $grid-gutter-width 0 $grid-gutter-width;
   background-color: $gray-lighter;
+  z-index: 1;
 
   .back {
     padding-top: 7px;
